# spotter

./: .env.local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/: manage.py
src/api/: urls.py
src/api/authors/: serializers.py  urls.py  views.py
src/api/books/: serializers.py  urls.py  views.py
src/api/favorites/: serializers.py  urls.py  views.py
src/api/login/: urls.py  views.py
src/api/recommendations/: urls.py  views.py
src/api/register/: serializers.py  urls.py  views.py
src/favorite/: models.py
src/favorite/migrations/: 0001_initial.py
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/recommendations/: recommendation.py
src/tests/: conftest.py
src/tests/api/authors/: test_views.py
src/tests/api/books/: test_views.py
src/tests/api/favorites/: test_views.py
src/tests/api/login/: test_views.py
src/tests/api/register/: test_views.py
src/tests/recommendations/: test_recommendation.py
