[tool.poetry]
name = "spotter"
version = "0.1.0"
description = ""
authors = ["pablobuenaposada <pablo.buenaposada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
lint.select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # Warning
    "C90", # mccabe
    "I",  # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PGH", # pygrep-hooks
    "PLE", # Error
    "PLW", # Warning
    "RSE", # flake8-raise
]
lint.ignore = ["E501"]